# leveredbot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SYSTEM_DESIGN_PLAN.md  alpaca_client.py  bot.py  config.py  job.py  knnsignal.md  leveretf_prompt.md  notifications.py  pipeline_types.py  pyproject.toml  uw_client.py
autoresearch_expectancy/: final_eval.py  prepare.py  program.md  regime_conditioned_review_2026-04-26.md  results.tsv  rolling_review_2026-04-26.md  shadow_bearish_review_2026-04-27.md  train.py  two_stage_review_2026-04-27.md
data/: expectancy_model.pkl  knn_model.pkl  leveraged_etf.db  xgb_model.pkl
db/: cache.py  models.py
docs/: DECISION_CHARTER.md  EXPANSION_PHASE.md  FIX_PLAN_AND_SCENARIOS_2026-04-24.md  IMPLEMENTATION_PLAN.md  PROFILE_2K_DEDICATED.md  REVIEW_MEMO_2026-04-24.md  SIM_2K_90D_2026-06-10.md  leveraged_etf_build_prompt.md  leveretf_fix.md
scripts/: sqqq_sim.py
strategy/: cash_sweep.py  compare_models.py  executor.py  expectancy_signal.py  knn_signal.py  microstructure.py  position_manager.py  regime.py  signals.py  sizing.py  sleeves.py  train_expectancy_model.py  vix_data.py  xgb_signal.py
tests/: conftest.py  test_audit_fixes.py  test_autoresearch_expectancy.py  test_backtest.py  test_bot.py  test_cache.py  test_cash_sweep.py  test_executor.py  test_expectancy_signal.py  test_failures.py  test_integration.py  test_knn_signal.py  test_microstructure.py  test_model_policy.py  test_notifications.py  test_position_manager.py  test_pregame.py  test_regime.py  test_signals.py  test_sizing.py  test_sleeves.py  (+4 more)
(+5 files in other folders)
